2002-05-26  Maciej Stachowiak  <mjs@apple.com>

	Webcore part of fix for:

	Radar 2884085 - add support for changing cursor over links

	* Makefile.am: Install tiff of link cursor.
	* kwq/qt/qcursor.h, kwq/KWQCursor.mm:
	(QCursor::QCursor): Change QCursor to contain an NSCursor.
	(QCursor::~QCursor): Likewise.
	(QCursor::operator=): Likewise.
	(QCursor::handle): Likewise.
	* kwq/KWQKCursor.mm:
	(+[NSCursor _WebCore_linkCursor]): NSCursor extension method that
	provides the link cursor.	
	(KCursor::handCursor): Use the link cursor instead of the default
	arrow cursor.
	* kwq/KWQKHTMLSettings.mm:
	(KHTMLSettings::changeCursor): Return TRUE; we always want cursor
	tracking.
	* kwq/KWQView.h, kwq/KWQView.mm:
	(-[KWQHTMLView setCursor:]): Remember the new cursor and
	invalidate cursor rects.
	(-[KWQHTMLView resetCursorRects]): Establish cursor rect for
	currently set cursor, if not default.
	* kwq/KWQWidget.mm:
	(QWidget::setCursor): Call setCursor: on the underlying
	NSView, if implemented.
	(QWidget::cursor): Implemented.
	(QWidget::unsetCursor): Implemented.

2002-05-25  Maciej Stachowiak  <mjs@apple.com>

	Changed WebCore to build as a framework, not a dylib, so resources
	can be added to it.

	* Makefile.am: Actual changes to build WebCore.framework
	* Resources/Info.plist: Added.
	* English.lproj/InfoPlist.strings: Added.
	* WebCore-tests.exp: Added.
	* WebCore.exp: Added.
	* libwebcore.exp: Removed.
	* libwebcoretests.exp: Removed.
	* .cvsignore: Updated.

=== 0.3 ===

2002-05-24  Shelley A Sheridan  <sheridan@apple.com>

	* ChangeLog:

=== Alexander-6 ===

2002-05-23  Maciej Stachowiak  <mjs@apple.com>

	Fixes for the following (the first bug also requires WebKit and
	WebBrowser changes):
	
	Radar 2896391 - command-click should open link in new window
	Radar 2935858 - two mails for each mailto:

	* khtml/html/html_inlineimpl.cpp:
	(HTMLAnchorElementImpl::defaultEventHandler): Set flag for Meta
	key in addition to Control, Shift and Alt, since the Command key