@@ -61,6 +61,10 @@ namespace KJS {
 
         static QPtrList<PluginInfo> *plugins;
         static QPtrList<MimeClassInfo> *mimes;
+#ifdef APPLE_CHANGES
+        static void ref();
+        static void unref();
+#endif
 
     private:
         static int m_refCount;
@@ -91,9 +95,17 @@ namespace KJS {
 
     class Plugin : public ObjectImp {
     public:
+#ifdef APPLE_CHANGES
+        Plugin( ExecState *exec, PluginBase::PluginInfo *info )
+          : ObjectImp(exec->interpreter()->builtinObjectPrototype() )
+        { m_info = info; PluginBase::ref(); };
+        virtual ~Plugin()
+        { PluginBase::unref(); }
+#else
         Plugin( ExecState *exec, PluginBase::PluginInfo *info )
           : ObjectImp(exec->interpreter()->builtinObjectPrototype() )
         { m_info = info; };
+#endif
         virtual Value get(ExecState *exec, const UString &propertyName) const;
         virtual const ClassInfo* classInfo() const { return &info; }
         static const ClassInfo info;
@@ -105,9 +117,17 @@ namespace KJS {
 
     class MimeType : public ObjectImp {
     public:
+#ifdef APPLE_CHANGES
+        MimeType( ExecState *exec, PluginBase::MimeClassInfo *info )
+          : ObjectImp(exec->interpreter()->builtinObjectPrototype() )
+        { m_info = info; PluginBase::ref(); };
+        virtual ~MimeType()
+        { PluginBase::unref(); }
+#else
         MimeType( ExecState *exec, PluginBase::MimeClassInfo *info )
           : ObjectImp(exec->interpreter()->builtinObjectPrototype() )
         { m_info = info; };
+#endif
         virtual Value get(ExecState *exec, const UString &propertyName) const;
         virtual const ClassInfo* classInfo() const { return &info; }
         static const ClassInfo info;
@@ -278,6 +298,25 @@ PluginBase::~PluginBase()
         mimes = 0;
     }
 }
+
+#ifdef APPLE_CHANGES
+void PluginBase::ref()
+{
+  m_refCount++;
+}
+
+void PluginBase::unref()
+{
+    m_refCount--;
+    if ( m_refCount==0 ) {
+        delete plugins;
+        delete mimes;
+        plugins = 0;
+        mimes = 0;
+    }
+}
+
+#endif
 
 
 /*******************************************************************/
